# dou-voice

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md
.githooks/: pre-commit
.github/workflows/: ci.yml  windows-build.yml
apps/dou-voice-desktop/: README.md  build-web.js  package.json
apps/dou-voice-desktop/main-src/: App.jsx  useContentFitWindow.js
apps/dou-voice-desktop/overlay-src/: RecordingOverlay.jsx
apps/dou-voice-desktop/src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
apps/dou-voice-desktop/src-tauri/capabilities/: default.json
apps/dou-voice-desktop/src-tauri/src/: app_state.rs  asr_options.rs  auth_window.rs  build_info.rs  diagnostics.rs  hotkey.rs  macos_hotkey.rs  main.rs  microphone_worker.rs  overlay.rs  settings.rs  tray.rs  util.rs  voice.rs  voice_worker.rs  window.rs
apps/dou-voice-desktop/web/: index.html  overlay.html
apps/dou-voice-desktop/web/scripts/: tauri-api.js
apps/dou-voice-desktop/web/styles/: main.css  overlay.css  tokens.css
crates/dou-voice-core/: Cargo.toml  build.rs
crates/dou-voice-core/proto/: pbws.proto
crates/dou-voice-core/src/: lib.rs
crates/dou-voice-core/src/asr/: config.rs  error_map.rs  event.rs  mod.rs  options.rs  parser.rs  protocol.rs  receive.rs  send.rs  session.rs  tests.rs
crates/dou-voice-core/src/audio/: mod.rs
crates/dou-voice-core/src/auth/: json.rs  mod.rs
crates/dou-voice-core/src/error/: mod.rs
crates/dou-voice-core/src/state/: mod.rs
crates/dou-voice-platform/: Cargo.toml
crates/dou-voice-platform/src/: feedback.rs  focus.rs  hotkey.rs  input.rs  lib.rs  volume.rs
crates/dou-voice-platform/src/feedback/: unsupported_feedback.rs  windows_feedback.rs
crates/dou-voice-platform/src/focus/: unsupported_focus.rs  windows_focus.rs
crates/dou-voice-platform/src/hotkey/: unsupported_hotkey.rs  windows_hotkey.rs  windows_hotkey_hook.rs
crates/dou-voice-platform/src/input/: unsupported.rs  windows_input.rs
crates/dou-voice-platform/src/volume/: linux_volume.rs  macos_volume.rs  process.rs  unsupported_volume.rs  windows_volume.rs
docs/: architecture.md  development.md  hotkey-key-passthrough-analysis.md  windows-desktop.md
scripts/: ci.js  generate_feedback_sounds.py
