[package]
name = "dou-voice-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
cpal = "0.15.3"
futures-util = { version = "0.3.32", features = ["sink"] }
prost = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rustls = { version = "0.23.41", default-features = false, features = ["ring"] }
tokio = { version = "1.52.3", features = ["macros", "sync", "time"] }
tokio-tungstenite = { version = "0.29.0", features = ["rustls-tls-webpki-roots"] }
uuid = { version = "=1.20.0", features = ["v4"] }

[build-dependencies]
prost-build = "0.13"
protoc-bin-vendored = "3"

[lints]
workspace = true
