[package]
name = "dou-voice-desktop"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
base64 = "0.22"
dou-voice-core = { path = "../../../crates/dou-voice-core" }
dou-voice-platform = { path = "../../../crates/dou-voice-platform" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.11.5", default-features = false, features = ["macos-private-api", "tray-icon", "wry"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
tokio = { version = "1.52.3", features = ["sync"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2-core-foundation = "0.3"
objc2-core-graphics = { version = "0.3", features = ["CGEvent", "CGEventTypes", "CGEventSource", "CGRemoteOperation"] }
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2.1" }

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"
